# projeto-airflow

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dags/: cotacao_criptomoeda.py
include/: controller.py  models.py
